started some flex formatting in main tag

--- a/index.html
+++ b/index.html
@@ -21,20 +21,31 @@
 
     </header>
 
-    <aside>
-
-    </aside>
-
     <main>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <aside>
+            <div class="about-me">
+                <h2>About Me</h2>
+            </div>
 
+            <div class="contact-me">
+                <h3>Contact Me</h3>
+            </div>
+
+        </aside>
+
+        <section>
+            <h2>Projects</h2>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+
+        </section>
     </main>
 
     <footer>
+        <p> This is the footer </p>
 
     </footer>
     
