--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <aside>
             <div class="about-me">
                 <h2>About Me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At ultrices mi tempus imperdiet nulla malesuada pellentesque.</p>
+                <img src="./assets/Images/Benita.JPG" alt="an image of Benita">
             </div>
 
             <div class="contact-me">
@@ -35,11 +37,11 @@
 
         <section>
             <h2>Projects</h2>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="project-1">1</div>
+            <div class="project-2">2</div>
+            <div class="project-3">3</div>
+            <div class="project-4">4</div>
+            <div class="project-5">5</div>
 
         </section>
     </main>
