--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </aside>
 
         <section>
-            <h2>Projects</h2>
-            <div class="project-1">1</div>
-            <div class="project-2">2</div>
-            <div class="project-3">3</div>
-            <div class="project-4">4</div>
-            <div class="project-5">5</div>
+            <div class="projects"><h2>Projects</h2></div>
+                <div class="project-1">1</div>
+                <div class="project-2">2</div>
+                <div class="project-3">3</div>
+                <div class="project-4">4</div>
+                <div class="project-5">5</div>
 
         </section>
     </main>
