added pseudoelements to nav bar and added id tags to nav links

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 
     <main>
         <aside>
-            <div class="about-me">
+            <div id="about-me" class="about-me">
                 <h2>About Me</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At ultrices mi tempus imperdiet nulla malesuada pellentesque.</p>
                 <img src="./assets/Images/Benita.JPG" alt="an image of Benita">
             </div>
 
-            <div class="contact-me">
+            <div id="contact-me" class="contact-me">
                 <h3>Contact Me</h3>
             </div>
 
         </aside>
 
         <section>
-            <div class="projects"><h2>Projects</h2></div>
+            <div id="projects" class="projects"><h2>Projects</h2></div>
                 <div class="project-1">1</div>
                 <div class="project-2">2</div>
                 <div class="project-3">3</div>
