--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Benita's Portfolio</h1>
         <nav>
             <ul>
-                <li>About Me</li>
-                <li>Projects</li>
-                <li>Contact Me</li>
+                <a href="#about-me"><li>About Me</li></a>
+                <a href="#projects"><li>Projects</li></a>
+                <a href="#contact-me"><li>Contact Me</li></a>
             </ul>
 
         </nav>
