Added img and linked project one to the website. Also fixed some formatting

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
         <section>
             <div id="projects" class="projects"><h2>Projects</h2></div>
-                <div class="project-1">1</div>
+                <div class="project-1">
+                    <a href="https://benitaisaac.github.io/Horiseon_Website/"> Horiseon Website </a>
+                    <img src="./assets/Images/Screen Shot 2023-11-06 at 11.59.01 AM.png">
+                </div>
                 <div class="project-2">2</div>
                 <div class="project-3">3</div>
                 <div class="project-4">4</div>
