centered my image on the aside

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <aside>
             <div id="about-me" class="about-me">
                 <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. At ultrices mi tempus imperdiet nulla malesuada pellentesque.</p>
-                <img src="./assets/Images/Benita.JPG" alt="an image of Benita">
+                <p>Hello, I'm Benita, a results-driven professional with a non-profit background, now transitioning to web design following the completion of a comprehensive bootcamp. I bring a strong foundation in soft skills, such as communication, collaboration, and adaptability, which complement my emerging hard skills in front-end development and UI/UX design. My approach is detail-oriented, and I thrive on creative problem-solving, all in the pursuit of crafting visually captivating and user-friendly web experiences.</p>
+                    <div class="benita_img"><img src="./assets/Images/Benita.JPG" alt="an image of Benita"></div>
             </div>
 
             <div id="contact-me" class="contact-me">
