--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="projects" class="projects"><h2>Projects</h2></div>
                 <div class="project-1">
                     <a href="https://benitaisaac.github.io/Horiseon_Website/"> Horiseon Website </a>
-                    <img src="./assets/Images/Screen Shot 2023-11-06 at 11.59.01 AM.png">
+                    <a href="https://benitaisaac.github.io/Horiseon_Website/"><img src="./assets/Images/Screen Shot 2023-11-06 at 11.59.01 AM.png"></a>
                 </div>
                 <div class="project-2">2</div>
                 <div class="project-3">3</div>
