Added 'coming soon' icons for projects 2-5

--- a/index.html
+++ b/index.html
@@ -41,10 +41,18 @@
                     <a href="https://benitaisaac.github.io/Horiseon_Website/"> Horiseon Website </a>
                     <a href="https://benitaisaac.github.io/Horiseon_Website/"><img src="./assets/Images/Screen Shot 2023-11-06 at 11.59.01 AM.png"></a>
                 </div>
-                <div class="project-2">2</div>
-                <div class="project-3">3</div>
-                <div class="project-4">4</div>
-                <div class="project-5">5</div>
+                <div class="project-2">
+                    <img src="./assets/Images/coming_soon.jpg" height="200px" width="350px" alt="Coming Soon" >
+                </div>
+                <div class="project-3">
+                    <img src="./assets/Images/coming_soon.jpg" height="200px" width="350px" alt="Coming Soon" >
+                </div>
+                <div class="project-4">
+                    <img src="./assets/Images/coming_soon.jpg" height="200px" width="350px" alt="Coming Soon" >
+                </div>
+                <div class="project-5">
+                    <img src="./assets/Images/coming_soon.jpg" height="200px" width="350px" alt="Coming Soon" >
+                </div>
 
         </section>
     </main>
