most current version before adding media queries

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                     <div class="benita_img"><img src="./assets/Images/Benita.JPG" alt="an image of Benita"></div>
             </div>
 
-            <div id="contact-me" class="contact-me">
+            <!-- <div id="contact-me" class="contact-me">
                 <h3>Contact Me</h3>
-            </div>
+            </div> -->
 
         </aside>
 
