changed project image dimensions to be on external css

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
                     <a href="https://benitaisaac.github.io/Horiseon_Website/"><img src="./assets/Images/Screen Shot 2023-11-06 at 11.59.01 AM.png"></a>
                 </div>
                 <div class="project-2">
-                    <img src="./assets/Images/coming_soon.jpg" height="200px" width="350px" alt="Coming Soon" >
+                    <img src="./assets/Images/coming_soon.jpg"  alt="Coming Soon" >
                 </div>
                 <div class="project-3">
-                    <img src="./assets/Images/coming_soon.jpg" height="200px" width="350px" alt="Coming Soon" >
+                    <img src="./assets/Images/coming_soon.jpg" alt="Coming Soon" >
                 </div>
                 <div class="project-4">
-                    <img src="./assets/Images/coming_soon.jpg" height="200px" width="350px" alt="Coming Soon" >
+                    <img src="./assets/Images/coming_soon.jpg" alt="Coming Soon" >
                 </div>
                 <div class="project-5">
-                    <img src="./assets/Images/coming_soon.jpg" height="200px" width="350px" alt="Coming Soon" >
+                    <img src="./assets/Images/coming_soon.jpg"  alt="Coming Soon" >
                 </div>
 
         </section>
