linked footer and added contact me info to footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <a href="#about-me"><li>About Me</li></a>
                     <a href="#projects"><li>Projects</li></a>
-                    <a href="#contact-me"><li>Contact Me</li></a>
+                    <a href="#footer"><li>Contact Me</li></a>
                 </ul>
 
             </nav>
@@ -56,8 +56,12 @@
         </section>
     </main>
 
-    <footer>
-        <p> This is the footer </p>
+    <footer id="footer">
+        <h3> Contact Me </h3>
+        <li>
+            <ul>408-887-1997</ul>
+            <ul>benita.isaac@gmail.com</ul>
+        </li>
 
     </footer>
     
